# haskell-servant-starter

./: Main.hs  budget.cabal  default.nix  hie.yaml  shell.nix
app/: Main.hs
nix/: default.nix
src/: App.hs  Budget.hs  Main.hs  Model.hs  User.hs
src/Budget/: App.hs  Budget.hs  Model.hs  User.hs
test/: Main.hs
