cabal-version:      >=1.10
name:               budget
version:            0.1.0.0
license-file:       LICENSE
build-type:         Simple
extra-source-files: CHANGELOG.md

library
    exposed-modules:
        Budget.Budget
        Budget.App
        Budget.User
        Budget.Model

    hs-source-dirs:   src
    default-language: Haskell2010
    build-depends:
        base >=4.13 && <4.14,
        text -any,
        http-types -any,
        mtl -any,
        persistent -any,
        persistent-sqlite -any,
        persistent-template -any,
        servant -any,
        servant-server -any,
        warp -any,
        aeson -any,
        resource-pool -any

executable budget
    main-is:          Main.hs
    hs-source-dirs:   app
    default-language: Haskell2010
    build-depends:
        base >=4.13 && <4.14,
        budget -any

test-suite test-budget
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test
    default-language: Haskell2010
    build-depends:
        base >=4.13 && <4.14,
        budget -any,
        hspec -any
